# code2

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: pu_adaptive_sdae.yaml
data/pu/: README.md
docs/: final_delivery.md  reproduction_guide.md
outputs/pu_adaptive_sdae/: env.json  resolved_config.json
outputs/pu_adaptive_sdae/results/: adaptive_search.csv  average_accuracy.csv  noise_summary.csv  noise_summary_agg.csv  per_class_f1.csv  per_class_f1_agg.csv  summary.csv  summary_agg.csv  task_metadata.csv
outputs/pu_disc_sweep/: resolved_config.json
outputs/pu_disc_sweep/results/: best_config.json  sweep.csv  sweep_agg.csv
outputs/pu_full_matrix/: env.json  resolved_config.json
outputs/pu_full_matrix/results/: adaptive_search.csv  average_accuracy.csv  noise_summary.csv  noise_summary_agg.csv  per_class_f1.csv  per_class_f1_agg.csv  summary.csv  summary_agg.csv  task_metadata.csv
outputs/pu_module_ablation/: resolved_config.json
outputs/pu_module_ablation/results/: contribution.csv  summary.csv  summary_agg.csv
outputs/pu_multisource/: env.json  resolved_config.json
outputs/pu_speed_ablation/: resolved_config.json
scripts/: check_runtime.py  download_pu_ntu.py  export_delivery_package.py  refresh_final_delivery.py  run_all.sh  run_delivery_pipeline.py  run_disc_sweep.py  run_module_ablation.py  run_pu_benchmark.py  run_pu_full_matrix.py  run_pu_multisource.py  run_speed_ablation.py
src/faultdg/: __init__.py  adaptive.py  config.py  data.py  models.py  pu_data.py  trainer.py  visuals.py
(+6 files in other folders)
